# scDICE-metrics

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: api.md
src/scdice_metrics/: __init__.py  _settings.py
src/scdice_metrics/benchmark/: __init__.py  _core.py  _counterfactual.py  _progress.py  _spatial_prepare.py  _swap.py  _templates.py
src/scdice_metrics/metrics/: __init__.py  _clustering.py  _counterfactual.py  _disentanglement.py  _nmi_ari.py  _perturbation.py  _spatial_clustering.py
src/scdice_metrics/nearest_neighbors/: __init__.py  _rapids.py
tests/: test_benchmark_templates.py  test_benchmarker.py  test_clustering_resolution.py  test_counterfactual_benchmarker.py  test_counterfactual_metrics.py  test_metrics.py  test_neighbors.py  test_perturbation_metrics.py  test_spatial_cluster_labels.py  test_spatial_clustering_metrics.py  test_swap_tasks.py
tests/utils/: data.py  swap_fixtures.py
